--- a/server/package.json
+++ b/server/package.json
@@ -28,9 +28,14 @@
   },
   "homepage": "https://github.com/joshdcuneo/board#readme",
   "dependencies": {
+    "compression": "1.7.4",
     "concurrently": "^3.6.1",
+    "cors": "2.8.5",
     "express": "^4.16.3",
-    "mongoose": "^5.2.7"
+    "helmet": "3.22.0",
+    "mongoose": "^5.2.7",
+    "winston": "3.2.1",
+    "winston-daily-rotate-file": "4.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
