--- a/server/package.json
+++ b/server/package.json
@@ -31,9 +31,14 @@
     "compression": "1.7.4",
     "concurrently": "^3.6.1",
     "cors": "2.8.5",
+    "dotenv": "8.2.0",
     "express": "^4.16.3",
+    "express-http-context": "1.2.3",
     "helmet": "3.22.0",
     "mongoose": "^5.2.7",
+    "node-uuid": "1.4.8",
+    "passport": "0.4.1",
+    "passport-facebook": "3.0.0",
     "winston": "3.2.1",
     "winston-daily-rotate-file": "4.4.2"
   },
