--- a/server/package.json
+++ b/server/package.json
@@ -35,10 +35,13 @@
     "express": "^4.16.3",
     "express-http-context": "1.2.3",
     "helmet": "3.22.0",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "^5.2.7",
     "node-uuid": "1.4.8",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "6.0.1",
     "winston": "3.2.1",
     "winston-daily-rotate-file": "4.4.2"
   },
