--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/joshdcuneo/board#readme",
   "dependencies": {
+    "@hapi/joi": "15.0.2",
     "compression": "1.7.4",
     "concurrently": "^3.6.1",
     "cors": "2.8.5",
@@ -46,6 +47,8 @@
     "winston-daily-rotate-file": "4.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "jest": "26.0.1",
+    "nodemon": "^1.18.3",
+    "supertest": "4.0.2"
   }
 }
