--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix src/**",
-    "test": "jest",
+    "test": "NODE_ENV=test jest --testTimeout=10000 --coverage --watchAll",
     "start": "node src/server.js",
     "server": "nodemon src/server.js",
     "client": "npm run start --prefix ../client",
@@ -41,6 +41,7 @@
     "node-uuid": "1.4.8",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
+    "passport-google-oauth": "2.0.0",
     "passport-local": "1.0.0",
     "passport-local-mongoose": "6.0.1",
     "winston": "3.2.1",
