--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,19 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.8.0",
-    "react-scripts": "1.1.4"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   }
 }
