WIP: API integration

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "board-server",
   "version": "1.0.0",
   "description": "An apollo-express server for the whiteboard app",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "lint": "eslint --fix src/**",
     "test": "jest",
